Change default Java version of project to 17.